--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Installation:
 
-    git clone git://github.com/surik/vimfiles.git ~/.vim
+    git clone git@github.com:surik/vimfiles.git ~/.vim
 
 Create symlinks:
 
