--- a/README
+++ b/README
@@ -11,3 +11,7 @@ Switch to the `~/.vim` directory, and fetch submodules:
     cd ~/.vim
     git submodule init
     git submodule update
+
+Te recursive update all submodules use:
+
+    git submodule update --recursive --remote
